--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "christina-pilat-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://Cpilat41.github.io/christina-pilat-portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -17,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
